Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-22 Kimmo
 PATCH: [ 1491212 ] Czech Translation
  Submitted by: Jan Hryz
  Src/Languages/Czech/MergeCzec.rc
 PATCH: [ 1492025 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1491424 ] Spanish translation for v2.5.3.7
  Submitted by Jesus M. Delgado 'Mack'
  Languages/Spanish: MergeSpanish.rc

2006-05-18 WinMerge beta release 2.5.4

2006-05-18 Kimmo
 PATCH: [ 1490540 ] Manual: add picture and explanation about our version tree
  Docs/Users/Manual: Introduction.xml
  Docs/Users/Manual/build: build_html.bat build_htmlhelp.bat
  Docs/Users/Manual/Art new files: WinMerge_versions.gif WinMerge_versions.odg

2006-05-17 Kimmo
 PATCH: [ 1489824 ] Better default folder for user filters
  Src: MainFrm.cpp
 BUG: [ 1445975 ] BuildDll.bat exit is not good
  Src/Languages: BuildDll.bat
 PATCH: [ 1488387 ] Russian translation update for 2.4.6
  Submitted by Dmitriy Aleshkowskiy
  Src/Languages/Russian: MergeRussian.rc

2006-05-15 Kimmo
 PATCH: [ 1489133 ] Manual: document new filter location(s)
  Docs/Users/Manual: Filters.xml
 PATCH: [ 1489091 ] Enable Help/Index
  Src: MainFrm.cpp
 PATCH: [ 1489098 ] Doesn't open Help TOC correctly
  Src: MainFrm.cpp
 BUG: [ 1487856 ] Long delay if many language dlls
  Src: Merge.cpp
  Src/Common: LanguageSelect.cpp LanguageSelect.h
 BUG: [ 1487854 ] ASSERT in CCrystalTextView::OnPrint
  Fix suggested by Mallato
  Src/editlib: ccrystaltextview.cpp
 Graphic Design: Alexander Skinner
  Docs/Users: Contributors.txt
 BUG: [ 1478057 ] Memory leak when cancelling print preview
  Fix suggested by Mallato
  Src/editlib: ccrystaltextview.cpp 

2006-05-15 Gal
 PATCH: [ 1488637 ] PHP/ASP Syntax Highlighting Fix (Bug 1441643)
  Src/editlib: asp.cpp php.cpp   

2006-05-14 Kimmo
 PATCH: [ 1485861 ] Czech translation - update
  Submitted by: Jan Hryz