@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-05-22 Gal
+ PATCH: [ 1491993 ] Ability to rename files (RFE 1380228)
+  Src: DirActions.cpp DirView.cpp DirView.h Merge.rc resource.h 
+
 2006-05-22 Kimmo
  PATCH: [ 1491212 ] Czech Translation
   Submitted by: Jan Hryz
